Prevent overflow of content in the code column extending into the end of guide

--- a/src/main/content/_assets/css/guide-multipane.scss
+++ b/src/main/content/_assets/css/guide-multipane.scss
@@ -395,6 +395,7 @@ header {
     left: calc(100% - 780px); /* Adjust for the width and padding */
     top: 100px;
     bottom: 0; /* Initially extend the code column the full height */
+    overflow: hidden;
 }
 
 #code_column_content {
